@@ -15,6 +15,9 @@ For a complete change history, see the SVN log.
 Mapnik 0.6.2 Release
 --------------------
 
+- PostGIS: Add a 'persist_connection' option (default true), that when false will release 
+  the idle psql connection after datasource goes out of scope (r1337) (#433,#434)
+
 - Filters: Add support for '!=' as an alias to '<>' for not-equals filters (avoids &lt;&gt;) (r1326) (#427)  
 
 - Gdal Plugin: Add support for Gdal overviews, enabling fast loading of > 1GB rasters (r1321) (#54)
